[package]
name = "stream-log-viewer"
version = "0.1.0"
authors = ["Mike Harris <mike.harris@cerner.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.19", features = ["r2d2", "streams"] }
r2d2 = "0.8.9"
futures = "0.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"