[package]
name = "stream-log-viewer"
version = "0.1.0"
authors = ["Mike Harris <mike.harris@cerner.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.19", features = ["streams", "aio", "connection-manager", "tokio-comp"] }
futures = "0.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
log = "0.4"
config = "0.10"